@@ -8,4 +8,9 @@
 	<longdescription>
 	Project Tox, also known as Tox, is a FOSS (Free and Open Source Software) instant messaging application aimed to replace Skype.
 	</longdescription>
+	<use>
+		<flag name='dht-bootstrap-daemon'>Dummy useflag, doesn't change anything.</flag>
+		<flag name='nacl'>Use nacl instead of libsodium</flag>
+		<flag name='ntox'>Build Ncurses frontend for tox</flag>
+	</use>
 </pkgmetadata>
